# Summentia

./: .gitignore  .gitmodules  README.md  english_history.json  grad_desc.json  iml2.json  package-lock.json  package.json  pyproject.toml  requirements.txt  rl.json  schema.prisma  svelte.config.js  tailwind.config.js  test.ts  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: production.yml  test.yml
api/: face_detection.py
api/SliTraNet/: test_slide_detection_2d.py
migrations/20240130132427_/: migration.sql
migrations/20240130140525_/: migration.sql
migrations/20240218153219_/: migration.sql
migrations/20240222211923_/: migration.sql
migrations/20240222212434_/: migration.sql
migrations/20240223071421_/: migration.sql
src/: app.css  auth-extensions.d.ts  formatter.test.ts  hooks.server.ts  integration.test.ts  panopto.test.ts  summariser.test.ts  transcriber.test.ts
src/components/: Navbar.svelte
src/lib/: URLHandler.ts  document_format.ts  formatter.ts  latex_generation.ts  lecture.ts  openai-test.js  output_engine.ts  panopto_downloader.ts  prisma.ts  slide.ts  summariser.ts  transcriber.ts  transcript.ts  transcript_timestamp.ts  utils.ts
src/lib/object_storage/: download.ts  helper.ts  s3_client.ts  static.ts  upload.ts
src/lib/server/: formatter.ts  latex_generation.ts  openai_clinet.ts  output_engine.ts  prisma.ts  python.ts  summariser.ts  transcriber.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  DownloadModal.svelte  Footer.svelte  Navbar.svelte
tests/: summariser_test.ts
(+63 files in other folders)
